--- a/src/main/webapp/css/HomePage.css
+++ b/src/main/webapp/css/HomePage.css
@@ -5,6 +5,11 @@
     font-family: -webkit-pictograph;
 }
 
+.logo img{
+    width: 180px;
+    height: 180px;
+}
+
 .content-home {
     text-align: center;
 }
@@ -58,12 +63,17 @@
 
 .back {
     position: absolute;
-    z-index: 2;
+    font-size: 30px;
+    font-weight: bold;
+    width: 80%;
+    margin: 10%;
+    text-align: center;
+    border-bottom: solid 2px;
 }
 
-.back, .back img {
-    width: 128px;
-    height: 128px;
+a {
+    text-decoration: none;
+    color: #1E1E24;
 }
 
 /*Login*/
@@ -77,7 +87,7 @@
     font-family: -webkit-pictograph;
     text-align: center;
     width: 500px;
-    height: 500px;
+    height: 580px;
     position: absolute;
     left: 50%;
     top: 50%;
