--- a/src/main/webapp/css/HomePage.css
+++ b/src/main/webapp/css/HomePage.css
@@ -66,7 +66,7 @@
     font-size: 30px;
     font-weight: bold;
     width: 80%;
-    margin: 10%;
+    margin: 30px 10% 10% 10%;
     text-align: center;
     border-bottom: solid 2px;
 }
@@ -239,7 +239,7 @@ input:focus {
     font-family: -webkit-pictograph;
     color: black;
     background-color: white;
-    margin-top: 80px;
+    margin-top: 20px;
     border-radius: 10px;
 }
 
