--- a/src/main/webapp/css/Common.css
+++ b/src/main/webapp/css/Common.css
@@ -253,13 +253,24 @@ input[type=file]::file-selector-button:hover {
     border-bottom: 2px solid #1E1E24;
 }
 
-.content-upload input[type=button], .team-button input[type=button] {
+.content-upload input[type=button], .team-button input[type=button]  {
     border: 2px solid #1E1E24;
     padding: .5em 1em;
     border-radius: 1rem;
     background-color: white;
     font-family: -webkit-pictograph;
     font-size: 15px;
+}
+
+.form input[type=button] {
+    border: 2px solid #1E1E24;
+    padding: 10px;
+    border-radius: 1rem;
+    background-color: white;
+    font-family: -webkit-pictograph;
+    font-size: 22px;
+    height: auto;
+    width: 100px;
 }
 
 .content-upload input[type=button]:hover, .team-button input[type=button]:hover {
