--- a/src/main/webapp/css/HomePage.css
+++ b/src/main/webapp/css/HomePage.css
@@ -33,10 +33,11 @@
 }
 
 .text-block button {
-    padding: 10px 10px 10px 10px;
-    margin-top: 30px;
-    border-radius: 1rem;
+    padding: 5px;
+    margin-top: 15px;
+    border-radius: 0.5rem;
     font-family: -webkit-pictograph;
+    font-size: 20px;
 }
 .text-block a {
     text-decoration: none;
