--- a/src/main/webapp/css/Common.css
+++ b/src/main/webapp/css/Common.css
@@ -197,6 +197,10 @@ input[type=file]::file-selector-button:hover {
     left: 50%;
     bottom: 50%;
     transform: translate(-50%, 50%);
+    padding: 15px;
+    background-color: #9CC9E8;
+    border: 2px solid;
+    border-radius: 1rem;
 }
 
 .team {
