Changed Footer.html to Footer.jsp and updated the link to the footer in every jsp necessary. Styled pages with Common.css, Footer.css and HomePage.css. Uploaded Github.png and Instagram.png for the footer.

--- a/src/main/webapp/css/Common.css
+++ b/src/main/webapp/css/Common.css
@@ -1,6 +1,8 @@
 /*OVUNQUE*/
 body {
     margin: 0;
+    position: relative;
+    min-height: 100vh;
     font-family: -webkit-pictograph;
 }
 
@@ -71,6 +73,10 @@ input[type=file]::file-selector-button:hover {
 
 .controlloCaricamento p {
     margin-top: 40px;
+}
+
+.footer-wrap {
+    padding-bottom: 205px;
 }
 
 .content {
