--- a/src/main/webapp/css/HomePage.css
+++ b/src/main/webapp/css/HomePage.css
@@ -1,7 +1,10 @@
 @charset "ISO-8859-1";
 
-.body {
+
+body {
     margin: 0;
+    position: relative;
+    min-height: 100vh;
     font-family: -webkit-pictograph;
 }
 
@@ -12,6 +15,7 @@
 
 .content-home {
     text-align: center;
+    padding-bottom: 205px;
 }
 
 .content-home h1 {
