--- a/src/main/webapp/css/Footer.css
+++ b/src/main/webapp/css/Footer.css
@@ -5,7 +5,8 @@ body {
 
 .footer {
     position: absolute;
-    left: 0; bottom: 0;
+    left: 0;
+    bottom: 0;
     min-height: 100px;
     width: 100%;
     background-color: #1C3373;
